{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 1157,
  "lineage": "da0f8888-3eaa-15be-074a-bb6c536436c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bos_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009ec3cc3a44c52e2",
            "arn": "arn:aws:ec2:us-east-1:891377135193:elastic-ip/eipalloc-009ec3cc3a44c52e2",
            "association_id": "eipassoc-0d90a5c1bcfdd7d73",
            "domain": "vpc",
            "id": "eipalloc-009ec3cc3a44c52e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01bd108437890b96f",
            "private_dns": "ip-10-26-1-113.ec2.internal",
            "private_ip": "10.26.1.113",
            "public_dns": "ec2-34-199-31-49.compute-1.amazonaws.com",
            "public_ip": "34.199.31.49",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-nat-eip01"
            },
            "tags_all": {
              "Name": "bos-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bos_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:891377135193:instance/i-00b8ebe566e8c3f9e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bos-instance-profile01",
            "id": "i-00b8ebe566e8c3f9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03823fb163ee119f5"
              }
            ],
            "primary_network_interface_id": "eni-03823fb163ee119f5",
            "private_dns": "ip-10-26-101-177.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.26.101.177",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0351ca60453dace74",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab6f432fc50d5c06",
            "tags": {
              "Name": "bos-ec201-private"
            },
            "tags_all": {
              "Name": "bos-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02448fa22182a04f1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "i-00b8ebe566e8c3f9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bos_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:internet-gateway/igw-039fcae73e56189f7",
            "id": "igw-039fcae73e56189f7",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-igw01"
            },
            "tags_all": {
              "Name": "bos-igw01"
            },
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bos_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "bos-alb-logs-lh-891377135193",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/eb3771ee97d7f33f",
            "arn_suffix": "app/bos-alb01/eb3771ee97d7f33f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bos-alb01-984360014.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/eb3771ee97d7f33f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bos-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0aa3623d9362f30d7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0798c219c01793cfe"
              },
              {
                "subnet_id": "subnet-0e03517a35fa2ddb6"
              }
            ],
            "subnets": [
              "subnet-0798c219c01793cfe",
              "subnet-0e03517a35fa2ddb6"
            ],
            "tags": {
              "Name": "bos-alb01"
            },
            "tags_all": {
              "Name": "bos-alb01"
            },
            "vpc_id": "vpc-0300ff465a0d4f4ca",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/eb3771ee97d7f33f"
          },
          "dependencies": [
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/c6cebb64ad4fe767",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/c6cebb64ad4fe767",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/eb3771ee97d7f33f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/c6cebb64ad4fe767"
          },
          "dependencies": [
            "aws_lb.bos_alb01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175",
            "certificate_arn": "arn:aws:acm:us-east-1:891377135193:certificate/eae7e6ee-a96d-4971-a550-c9cac6dae682",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/712829e3e421a809",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/eb3771ee97d7f33f",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bos_default_block01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175/3a0afdb381608597",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175/3a0afdb381608597",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175",
            "priority": 99,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175/3a0afdb381608597"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_listener.bos_https_listener01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bos_require_origin_header01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/712829e3e421a809",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175/953a23a3389b1935",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-BOS-Growl",
                    "regex_values": [],
                    "values": [
                      "Qk6gDqlG4ZLZO0aojM5qea4qpb1bajg9"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175/953a23a3389b1935",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/eb3771ee97d7f33f/72044e397b385175/953a23a3389b1935"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_listener.bos_https_listener01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01",
            "random_password.bos_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bos_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/712829e3e421a809",
            "arn_suffix": "targetgroup/bos-tg01/712829e3e421a809",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/712829e3e421a809",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/eb3771ee97d7f33f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bos-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bos-tg01"
            },
            "tags_all": {
              "Name": "bos-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/712829e3e421a809"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bos_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/712829e3e421a809-2026012211432428060000000e",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/712829e3e421a809",
            "target_id": "i-00b8ebe566e8c3f9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_instance.bos_ec201_private_bonus",
            "aws_lb_target_group.bos_tg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bos_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009ec3cc3a44c52e2",
            "association_id": "eipassoc-0d90a5c1bcfdd7d73",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0177ec2595f581253",
            "network_interface_id": "eni-01bd108437890b96f",
            "private_ip": "10.26.1.113",
            "public_ip": "34.199.31.49",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e03517a35fa2ddb6",
            "tags": {
              "Name": "bos-nat01"
            },
            "tags_all": {
              "Name": "bos-nat01"
            },
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cf7950e0ccdddccf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0177ec2595f581253",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0cf7950e0ccdddccf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0cf7950e0ccdddccf"
          },
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_nat_gateway.bos_nat01",
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-039fcae73e56189f7",
            "id": "r-rtb-037a17a119912c7041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-037a17a119912c704",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-037a17a119912c704"
          },
          "dependencies": [
            "aws_internet_gateway.bos_igw01",
            "aws_route_table.bos_public_rt01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-0cf7950e0ccdddccf",
            "id": "rtb-0cf7950e0ccdddccf",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0177ec2595f581253",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bos-private-rt01"
            },
            "tags_all": {
              "Name": "bos-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-0cf7950e0ccdddccf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-037a17a119912c704",
            "id": "rtb-037a17a119912c704",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039fcae73e56189f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bos-public-rt01"
            },
            "tags_all": {
              "Name": "bos-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-037a17a119912c704",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa18e949db53d810",
            "region": "us-east-1",
            "route_table_id": "rtb-0cf7950e0ccdddccf",
            "subnet_id": "subnet-0ab6f432fc50d5c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0477755d90824e5df",
            "region": "us-east-1",
            "route_table_id": "rtb-0cf7950e0ccdddccf",
            "subnet_id": "subnet-0bc0de8e1552864ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00989f04941b321a1",
            "region": "us-east-1",
            "route_table_id": "rtb-037a17a119912c704",
            "subnet_id": "subnet-0e03517a35fa2ddb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7e1a26b1136ad6e",
            "region": "us-east-1",
            "route_table_id": "rtb-037a17a119912c704",
            "subnet_id": "subnet-0798c219c01793cfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0aa3623d9362f30d7",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa3623d9362f30d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-3b927c52"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bos-alb-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-alb-sg01"
            },
            "tags_all": {
              "Name": "bos-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0aa3623d9362f30d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-02448fa22182a04f1",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02448fa22182a04f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa3623d9362f30d7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bos-ec2-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-ec2-sg01"
            },
            "tags_all": {
              "Name": "bos-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-02448fa22182a04f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-092cd7e0a74236540",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092cd7e0a74236540",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access only from app tier EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02448fa22182a04f1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bos-rds-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-rds-sg01"
            },
            "tags_all": {
              "Name": "bos-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-092cd7e0a74236540",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-09ba1cd07f58de9d7",
            "description": "SG for VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ba1cd07f58de9d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EC2 SG access only for 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02448fa22182a04f1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bos-vpce-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-vpce-sg01"
            },
            "tags_all": {
              "Name": "bos-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-09ba1cd07f58de9d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0ab6f432fc50d5c06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab6f432fc50d5c06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet01"
            },
            "tags_all": {
              "Name": "bos-private-subnet01"
            },
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0ab6f432fc50d5c06",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0bc0de8e1552864ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc0de8e1552864ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet02"
            },
            "tags_all": {
              "Name": "bos-private-subnet02"
            },
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0bc0de8e1552864ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0e03517a35fa2ddb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e03517a35fa2ddb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet01"
            },
            "tags_all": {
              "Name": "bos-public-subnet01"
            },
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0e03517a35fa2ddb6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0798c219c01793cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0798c219c01793cfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet02"
            },
            "tags_all": {
              "Name": "bos-public-subnet02"
            },
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0798c219c01793cfe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bos_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc/vpc-0300ff465a0d4f4ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.26.0.0/16",
            "default_network_acl_id": "acl-0a2c03d7f7de33ad5",
            "default_route_table_id": "rtb-07e0a2c1003d17f49",
            "default_security_group_id": "sg-0a10cf8441e8788df",
            "dhcp_options_id": "dopt-01a7c7fae7f55da14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0300ff465a0d4f4ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e0a2c1003d17f49",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-vpc01"
            },
            "tags_all": {
              "Name": "bos-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpc-0300ff465a0d4f4ca",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-009ca78793b20e0a9",
            "dns_entry": [
              {
                "dns_name": "vpce-009ca78793b20e0a9-t3sadzu6.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-009ca78793b20e0a9-t3sadzu6-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-009ca78793b20e0a9-t3sadzu6-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02711833L4EIMNMKTCMS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-009ca78793b20e0a9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00a11c0bde7f59ff9",
              "eni-0a2ee6e8820106d16"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09ba1cd07f58de9d7"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.62",
                "subnet_id": "subnet-0ab6f432fc50d5c06"
              },
              {
                "ipv4": "10.26.102.18",
                "subnet_id": "subnet-0bc0de8e1552864ea"
              }
            ],
            "subnet_ids": [
              "subnet-0ab6f432fc50d5c06",
              "subnet-0bc0de8e1552864ea"
            ],
            "tags": {
              "Name": "bos-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-009ca78793b20e0a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-01c42f25ec89a3857",
            "dns_entry": [
              {
                "dns_name": "vpce-01c42f25ec89a3857-3s6zjr2l.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c42f25ec89a3857-3s6zjr2l-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c42f25ec89a3857-3s6zjr2l-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02730023FL1MQFZ0G1AY"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z02714211VAFK2S2W2WER"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01c42f25ec89a3857",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-074a9555369a6916d",
              "eni-0c1b66da3bf5f10c1"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09ba1cd07f58de9d7"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.120",
                "subnet_id": "subnet-0ab6f432fc50d5c06"
              },
              {
                "ipv4": "10.26.102.83",
                "subnet_id": "subnet-0bc0de8e1552864ea"
              }
            ],
            "subnet_ids": [
              "subnet-0ab6f432fc50d5c06",
              "subnet-0bc0de8e1552864ea"
            ],
            "tags": {
              "Name": "bos-vpce-kms01"
            },
            "tags_all": {
              "Name": "bos-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-01c42f25ec89a3857",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-05ea35479cbda0aa3",
            "dns_entry": [
              {
                "dns_name": "vpce-05ea35479cbda0aa3-0sq3qwoh.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05ea35479cbda0aa3-0sq3qwoh-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05ea35479cbda0aa3-0sq3qwoh-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07794352UB5P7TSTUGFY"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0780836J3S1V0L0R2HF"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0273293UM4FRCJR9JU0"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0272800GFOZZX23ESAN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05ea35479cbda0aa3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0128ca8abee4b4e9a",
              "eni-0f3ec09af9f03f160"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09ba1cd07f58de9d7"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.6",
                "subnet_id": "subnet-0ab6f432fc50d5c06"
              },
              {
                "ipv4": "10.26.102.223",
                "subnet_id": "subnet-0bc0de8e1552864ea"
              }
            ],
            "subnet_ids": [
              "subnet-0ab6f432fc50d5c06",
              "subnet-0bc0de8e1552864ea"
            ],
            "tags": {
              "Name": "bos-vpce-logs01"
            },
            "tags_all": {
              "Name": "bos-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-05ea35479cbda0aa3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-06f1eb9e5662a0c3f",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06f1eb9e5662a0c3f",
            "ip_address_type": "ipv4",
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cf7950e0ccdddccf"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "bos-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "bos-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-06f1eb9e5662a0c3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-05bd349b289847094",
            "dns_entry": [
              {
                "dns_name": "vpce-05bd349b289847094-lfbosrz5.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05bd349b289847094-lfbosrz5-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05bd349b289847094-lfbosrz5-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0273913N71O6D650IJS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05bd349b289847094",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-014987de4ff7d2b93",
              "eni-0d921c80edb938455"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09ba1cd07f58de9d7"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.140",
                "subnet_id": "subnet-0ab6f432fc50d5c06"
              },
              {
                "ipv4": "10.26.102.162",
                "subnet_id": "subnet-0bc0de8e1552864ea"
              }
            ],
            "subnet_ids": [
              "subnet-0ab6f432fc50d5c06",
              "subnet-0bc0de8e1552864ea"
            ],
            "tags": {
              "Name": "bos-vpce-secrets01"
            },
            "tags_all": {
              "Name": "bos-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-05bd349b289847094",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0e3c459f4352b5860",
            "dns_entry": [
              {
                "dns_name": "vpce-0e3c459f4352b5860-q8r6lmiu.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e3c459f4352b5860-q8r6lmiu-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e3c459f4352b5860-q8r6lmiu-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0410155H6C1VLVBJ263"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z02783522255ZVTZCSKL8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e3c459f4352b5860",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01445b813aca13236",
              "eni-02f5dccae0fc4fa94"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09ba1cd07f58de9d7"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.244",
                "subnet_id": "subnet-0ab6f432fc50d5c06"
              },
              {
                "ipv4": "10.26.102.239",
                "subnet_id": "subnet-0bc0de8e1552864ea"
              }
            ],
            "subnet_ids": [
              "subnet-0ab6f432fc50d5c06",
              "subnet-0bc0de8e1552864ea"
            ],
            "tags": {
              "Name": "bos-vpce-ssm01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0e3c459f4352b5860",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-06fa52aab17eafceb",
            "dns_entry": [
              {
                "dns_name": "vpce-06fa52aab17eafceb-tem3lmbn.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06fa52aab17eafceb-tem3lmbn-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06fa52aab17eafceb-tem3lmbn-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0181786178CMXULCJSQS"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z07582482F6ACA81P51NF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06fa52aab17eafceb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-057294b312263b32d",
              "eni-0d23322bc92e86928"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-09ba1cd07f58de9d7"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.49",
                "subnet_id": "subnet-0ab6f432fc50d5c06"
              },
              {
                "ipv4": "10.26.102.28",
                "subnet_id": "subnet-0bc0de8e1552864ea"
              }
            ],
            "subnet_ids": [
              "subnet-0ab6f432fc50d5c06",
              "subnet-0bc0de8e1552864ea"
            ],
            "tags": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0300ff465a0d4f4ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-06fa52aab17eafceb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bos_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-04c047bb3dcf18d70",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04c047bb3dcf18d70",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0aa3623d9362f30d7",
            "security_group_rule_id": "sgr-04c047bb3dcf18d70",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-04c047bb3dcf18d70",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0d2c68c93ee070087",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d2c68c93ee070087",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02448fa22182a04f1",
            "security_group_rule_id": "sgr-0d2c68c93ee070087",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0d2c68c93ee070087",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-01904f99968835ad9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-01904f99968835ad9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-092cd7e0a74236540",
            "security_group_rule_id": "sgr-01904f99968835ad9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-01904f99968835ad9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-01568fd5f1a6cb3a5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-01568fd5f1a6cb3a5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09ba1cd07f58de9d7",
            "security_group_rule_id": "sgr-01568fd5f1a6cb3a5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-01568fd5f1a6cb3a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_ingres_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0a923fba4f941933e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a923fba4f941933e",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-3b927c52",
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0aa3623d9362f30d7",
            "security_group_rule_id": "sgr-0a923fba4f941933e",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0a923fba4f941933e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01",
            "data.aws_ec2_managed_prefix_list.bos_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_ingres_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0ea6d2ff5282c0a30",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ea6d2ff5282c0a30",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0aa3623d9362f30d7",
            "security_group_rule_id": "sgr-0ea6d2ff5282c0a30",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0ea6d2ff5282c0a30",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-03cf285f43efdcdc0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03cf285f43efdcdc0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0aa3623d9362f30d7",
            "region": "us-east-1",
            "security_group_id": "sg-02448fa22182a04f1",
            "security_group_rule_id": "sgr-03cf285f43efdcdc0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-03cf285f43efdcdc0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0c5a8afa600f48b12",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-0c5a8afa600f48b12",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02448fa22182a04f1",
            "region": "us-east-1",
            "security_group_id": "sg-092cd7e0a74236540",
            "security_group_rule_id": "sgr-0c5a8afa600f48b12",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0c5a8afa600f48b12",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0b4f4b8188b3cca7f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-0b4f4b8188b3cca7f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02448fa22182a04f1",
            "region": "us-east-1",
            "security_group_id": "sg-09ba1cd07f58de9d7",
            "security_group_rule_id": "sgr-0b4f4b8188b3cca7f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0b4f4b8188b3cca7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    }
  ]
}